# search_engine

./: .gitignore  Cargo.toml  README.md  config.yaml
src/: main.rs
src/client/routes/: base.rs  index.rs  mod.rs
src/config/: mod.rs
src/fs/: lz4_provider.rs  mod.rs  provider.rs
src/internal/: mod.rs  models.rs
src/internal/routes/: base.rs  index.rs  mod.rs
