[package]
name = "search_engine"
version = "0.1.0"
authors = ["Universemul <davidbarthelemy28@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel = "0.11.0"
lz4 = "1.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"